tests/paczka1/fuzzy1/77183895.err
Error in line 2: KDCRc7Mtalf S774 81,5
Error in line 36: mp3bM5ZhcnI S136 94,8
